--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,33 @@
 group 'app.sina'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
 
-sourceCompatibility = 1.5
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
+
+
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+apply plugin: 'javafx-gradle-plugin'
+
+jfx {
+    mainClass = 'Main'
+
+    vendor = 'Sina'
 }
